apps/base/download-sabnzbd/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
      app.kubernetes.io/component: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app.kubernetes.io/component: sabnzbd
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # sabnzbd
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: sabnzbd
        image: "registry.lan/sabnzbd:5.1.3-3.14.8-slim-trixie"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: sabnzbd-data
          mountPath: /opt/sabnzbd-data
          subPath: data
        - name: sabnzbd-download
          mountPath: /mnt/download
        - name: sabnzbd-config
          mountPath: /tmp/config
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: sabnzbd-data
        persistentVolumeClaim:
          claimName: sabnzbd-data
      - name: sabnzbd-config
        secret:
          secretName: sabnzbd-config
      - name: sabnzbd-download
        persistentVolumeClaim:
          claimName: nfs-download
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
