apps/base/download-sabnzbd/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/component: sabnzbd
